# OC_P4_ESN_TechNova_Partners

./: .gitignore  README.md  main.py  pyproject.toml
data/: README.md
data/processed/: .gitkeep  X_features.csv  X_features_for_modeling.csv  employee_data_merged_clean.csv  feature_engineering_info.json  y_target.csv
data/raw/: .gitkeep
notebooks/: README.md
notebooks/exploratory/: 01_exploratory_data_analysis.ipynb
notebooks/modeling/: 02_data_preparation_for_modeling.ipynb  03_model_training_and_evaluation copy.ipynb  03_model_training_and_evaluation.ipynb  04_optimization.ipynb  05_preparation_for_P5.ipynb
notebooks/modeling/training/: 03_model_training_and_evaluation.ipynb
src/: __init__.py  project_utils.py  utils.py
