[project]
name = "oc-p4-esn-technova-partners"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "utils>=1.0.2",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "deptry>=0.23.1",
]

[tool.deptry]
known_first_party = ["src"]
ignore_notebooks = false


